--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://hanjagame.netlify.app",
+  "homepage": "https://hanja-game.netlify.app",
   "devDependencies": {
     "@types/react-helmet": "^6.1.11"
   }
