--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/uuid": "^10.0.0",
+    "@types/webfontloader": "^1.6.38",
     "pixi.js": "7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -23,7 +24,8 @@
     "styled-components": "^6.1.13",
     "typescript": "^4.4.2",
     "uuid": "^10.0.0",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start": "react-scripts start --max_old_space_size=7000",
