--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "typescript": "^4.4.2",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.0",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "zod": "^3.23.8"
   },
   "scripts": {
     "start": "react-scripts start --max_old_space_size=7000",
