--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
-    "typescript": "^4.4.2",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.0",
     "webfontloader": "^1.6.28",
@@ -54,6 +53,7 @@
   },
   "homepage": "https://hanja-game.netlify.app",
   "devDependencies": {
-    "@types/react-helmet": "^6.1.11"
+    "@types/react-helmet": "^6.1.11",
+    "typescript": "^5.4.5"
   }
 }
